--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,124 @@ table {
 }
 
 /* ----- */
+
+/* body {
+	background: darkblue;
+} */
+
+.weatherCard {
+	width: 90%;
+	max-width: 500px;
+	background-color: grey;
+	border: 5px solid pink;
+	color: #fff;
+	margin: 100px auto 0;
+	border-radius: 20px;
+	padding: 40px 35px;
+	text-align: center;
+};
+
+.weatherSearch {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.weatherSearch input {
+	border: 0;
+	outline: 0;
+	background: #ebfffc;
+	color: #555;
+	padding: 10px 25px;
+	height: 30px;
+	width: 300px;
+	border-radius: 30px;
+	flex: 1;
+	margin-right: 16px;
+	font-size: 18px;
+}
+
+.weatherSearch button {
+	border: 0;
+	outline: 0;
+	background: #ebfffc;
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	cursor: pointer;
+}
+
+.weatherSearch button img {
+	width: 16px;
+}
+
+.weatherIcon {
+	width: 170px;
+	margin-top: 0px;
+}
+
+.weather img {
+	width: 100px;
+	margin: -10;
+}
+
+.weather h1 {
+	font-size: 50px;
+	font-weight: 500;
+}
+
+.weather h2 {
+	font-size: 35px;
+	font-weight: 400;
+	margin-top: 10px;
+}
+
+.weather h4 {
+	font-size: 15px;
+	font-weight: 200;
+	margin-top: 5px;
+}
+
+.details {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	padding: 0 20px;
+	margin-top: 10px;
+}
+
+.col {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	margin: 10px;
+}
+
+.col img {
+	width: 30px;
+	margin-right: 10px;
+}
+
+.humidity, .wind {
+	font-size: 18px;
+	margin-top: -6px;
+}
+
+.weather {
+	display: none;
+}
+
+.error {
+	text-align: left;
+	margin-left: 10px;
+	font-size: 14px;
+	margin-top: 10px;
+	display: none;
+}
+
+
